# DACORL

./: .gitignore  .gitmodules  .pre-commit-config.yaml  MF_hpo.sh  MT_MF_hpo.sh  MT_hpo.sh  README.md  benchmarking.py  calc_means.py  check_fbest.py  check_fbest_single.sh  cma_plotting.py  combine_buffers.py  combine_mds.py  create_hetero_data.sh  create_homo_data.sh  data_gen.py  data_gen.sh  data_gen_and_train.sh  eval.py  eval.sh  eval_sgd.py  generate_agent_configs.py  generate_and_train_agents.sh  generate_cmaes_table.py  generate_default_data.sh  generate_incumbent_statistics.py  generate_latex_tables.py  generate_latex_tables_sgd.py  generate_perc_table.py  generate_result_comparison.py  generate_results_markdown.py  generate_sgd_tables.py  generate_tables.py  generate_tables_percentages.py  grid_search.py  hpo.sh  hpo_KISLURM.sh  main.py  meta_data_gen_and_train.sh  (+19 more)
cifar_networks/: nb201.py
cifar_networks/large/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
cifar_networks/medium/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
cifar_networks/small/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
configs/agents/cmaes_constant/: default.json
configs/agents/constant/: 10.json  4.json  5.json
configs/agents/csa/: default.json
configs/agents/exponential_decay/: 1.json  2.json  3.json  6.json  default.json
configs/agents/sgdr/: 1.json  2.json  3.json  6.json  7.json  default.json
configs/agents/step_decay/: 3.json  4.json  6.json  default.json
configs/environment/: Ackley_default.json  Ackley_extended.json  Ackley_extended_vel.json  Ackley_extended_vel_no_pos.json  Rastrigin_default.json  Rastrigin_extended.json  Rastrigin_extended_vel_no_pos.json  Rosenbrock_default.json  Rosenbrock_extended.json  Rosenbrock_extended_all.json  Rosenbrock_extended_mom.json  Rosenbrock_extended_velocity.json  Sphere_default.json  Sphere_default_extended.json  Sphere_extended_velocity.json
configs/environment/CMAES/: default.json
configs/environment/LayerwiseSGD/: cifar10.json  default.json  mnist.json
configs/environment/SGD/: cifar10.json  default.json  mnist.json
data/step_decay/ToySGD/: rep_buffer  (+2 more)
hydra_conf/: config.yaml
hydra_conf/env/: LayerwiseSGD.yaml  SGD.yaml  ToySGD.yaml
legacy_scripts/: create_app_figures.py  create_hetero_data.sh  create_homo_data.sh  grid_search.py  hpo_KISLURM.sh  hpo_all_fct.sh  run_hpo_inc.py  sanity_check_hpo.py  teacher_hpo_SGD.py  test_cma.py  train_agent.py  train_agent_online.py  train_hpo.py  train_hpo_all_fct.py
plotting_notebooks/: all_schedules.ipynb  benchmark_functions.ipynb  homo_hetero_teachers.ipynb  introduction_example.ipynb  single_teach_sched.ipynb
plotting_thesis/: benchmark_functions.ipynb  starting_points.ipynb  tables.ipynb  violin.ipynb
scripts/: percentage.sh
scripts/LayerwiseSGD/: eval_all_seeds.sh  eval_single.sh  sgd_data_gen.sh  train_hetero.sh  train_homo.sh  train_on_all_seeds.sh  train_single.sh  trainer_hpo.sh
scripts/SGD/: combine_hetero.sh  combine_homo.sh  eval_SGD.sh  eval_SGD_hetero.sh  eval_on_all_seeds.sh  sgd_data_gen.sh  train_hetero.sh  train_homo.sh  train_on_all_seeds.sh  train_single.sh
scripts/local/: check_fbest_single.sh  generate_and_train.sh  plotting.sh
scripts/meta/: cma_datagen_train.sh  cma_hpo.sh  data_gen.sh  data_gen_and_train.sh  generate_cmaes_table.sh  generate_homogeneous.sh  generate_sgd_table.sh  generate_tables.sh  generate_tables_percentages.sh  grid_search.sh  hpo.sh  hpo_sanity_check.sh  mf_hpo.sh  plot_type.sh  plotting.sh  plotting_cma.sh  plotting_sgd.sh  run_cma.sh  run_data_gen.sh  run_data_gen_and_train.sh  run_hpo.sh  run_mf_hpo.sh  run_plot_type.sh  run_plotting.sh  run_plotting_cma.sh  run_plotting_sgd.sh  run_sgd_training.sh  sgd_train_single.sh
scripts/nemo/: data_gen.sh  data_gen_and_train.sh  hpo.sh  run_multiple_agents.sh  train.sh
scripts/plotting/: plot_all_actions.sh  plot_all_comparisons.sh  plot_teachers.sh  plotting_action_hetero.sh  plotting_action_homo.sh  plotting_action_single.sh  plotting_comparison_hetero.sh  plotting_comparison_homo.sh  plotting_comparison_single.sh
scripts/tables/: generate_all_hetero_tables.sh  generate_all_hetero_tables_interp.sh  generate_all_homo_tables.sh  generate_all_homo_tables_interp.sh  generate_all_mixed_tables.sh  generate_all_mixed_tables_interp.sh  generate_all_tables.sh  generate_hetero_tables.sh  generate_hetero_tables_interp.sh  generate_homo_tables.sh  generate_homo_tables_interp.sh  generate_single_tables.sh  generate_single_tables_interp.sh
src/: data_generator.py  evaluator.py  experiment_data.py  trainer.py
src/agents/: __init__.py  agent.py  cmaes_constant.py  constant.py  csa.py  exponential_decay.py  sgdr.py  step_decay.py  td3.py  td3_bc_agent.py  teacher.py
src/experiments/: toysgd.py
src/utils/: __init__.py  agent_components.py  calculate_sgd_statistic.py  combination.py  combinations.py  general.py  generate_cma_plots.py  generate_data.py  generate_plots.py  hydra_config.py  replay_buffer.py  run_statistics.py  test_agent.py  test_cma.py  test_sgd.py  train_agent.py  train_agent_online.py
(+110 files in other folders)
